fix responsive on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ a:after {
 	padding-top:20px;
 	text-align:center;
 	background-attachment: relative;
-	background-position: center -500px;
+	background-position: center 65%;
 	min-height: 500px;
 	width: 100%;
 	
